--- a/awesome.css
+++ b/awesome.css
@@ -25,7 +25,7 @@ p {
     text-align: center;
 }
 
-.awesome__line {
+.block-why__line {
     border-bottom: 1px solid #EC7979;
     width: 170px;
     margin: 0px auto;
@@ -38,12 +38,12 @@ p {
     margin-bottom: 71px;
 }
 
-.awesome__container {
+.awesome-container {
     width: 100%;
     padding-bottom: 58px;
 }
 
-.awesome__container__cards {
+.awesome-container__cards {
     width: 370px;
     color: #000000;
     display: inline-block;
