--- a/footer.css
+++ b/footer.css
@@ -1,5 +1,11 @@
 footer {
-    width: 100%;
+    
+    display: flex;
+    justify-content: center;
+}
+
+.site-bottom {
+    width: 1170px;
     background-color: black;
 }
 
