--- a/footer.css
+++ b/footer.css
@@ -1,11 +1,10 @@
 footer {
-    
     display: flex;
     justify-content: center;
 }
 
 .site-bottom {
-    width: 1170px;
+    width: 100%;
     background-color: black;
 }
 
